--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,8 @@
   .social {
     @apply text-2xl text-light-content transition-transform duration-300 hover:-translate-y-1 dark:text-dark-content;
   }
+
+  .sun {
+    @apply h-full w-[15%] rounded-full bg-light-primary transition-all duration-1000;
+  }
 }
