Add animated sinc wave component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .social {
-    @apply text-2xl text-light-content transition-transform duration-300 hover:-translate-y-1 dark:text-dark-content;
+    @apply text-2xl z-30 text-light-content transition-transform duration-300 hover:-translate-y-1 dark:text-dark-content;
   }
 
   .sun {
